--- a/src/components/Random_Products/RandomProducts.css
+++ b/src/components/Random_Products/RandomProducts.css
@@ -1,21 +1,3 @@
-/* .Random-Products-Container{
-    width: 95%;
-    height: 85vh;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    overflow-x: scroll;
-    margin-top: 12vh;
-    margin-left: auto;
-    margin-right: auto;
-    scrollbar-width: none;
-    background-color: rgb(248, 250, 251);
-    -ms-overflow-style: none;
-     box-shadow: 0px 1px 2px rgb(102, 101, 101);
-     border-radius: 3px;
-    
-} */
-
 
 .Random-Products-Container{
     width: 100%;
@@ -43,7 +25,7 @@
         scrollbar-width: none;
         background-color: rgb(248, 250, 251);
         -ms-overflow-style: none;
-        box-shadow: 0px 1px 1px ipx rgb(102, 101, 101);
+        box-shadow: 0px 1px 1px 1px rgb(228, 226, 226);
         border-radius: 3px;
 
 }
@@ -56,13 +38,14 @@
 }
 .catagory-div{
     height: 20vh;
-    width: 60%;
+    width: 94%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    background-color: rgb(248, 250, 251);
     align-items: center;
-    box-shadow: 0px 1px 2px rgb(102, 101, 101);
-    gap: 8px;
+    box-shadow: 0px 1px 1px 1px rgb(228, 226, 226);
+    gap: 50px;
     flex-direction: row;
     overflow-x: scroll;
     -ms-overflow-style: none;
@@ -81,12 +64,12 @@
     flex-direction: column;
     gap: 4.5px;
     margin-left: 10px;  
-    box-shadow: 0px 1px 1px 1px rgb(151, 144, 144);
+    /* box-shadow: 0px .5px .5px .5px rgb(151, 144, 144); */
 }
 .catagory-items img{
-    width: 150px;
-    height: 14vh;
-    padding-top: 20px;
+    width: 120px;
+    height: 13vh;
+    padding-top: 10px;
     
 }
 .catagory-items p{
@@ -94,7 +77,7 @@
 }
 
 .product-Items {
-        border: 1px solid #ccc;
+        /* border: 1px solid #f3efef; */
         padding: 10px;
         text-align: center;
         height: 38vh;
@@ -105,9 +88,9 @@
         gap: 10px;
         width:250px;
         margin-left: 20px;
-         /* border: solid black .5px; */
-         background-color: white;
-       box-shadow: 0px 1px 1px rgb(102, 101, 101);
+        border: solid rgb(242, 239, 239) 0.1px;
+        background-color: white;
+       /* box-shadow: 0px .5px 0.5px rgb(237, 234, 234); */
 }
 .image-box{
     width: 100%;
