--- a/src/Product_Card/Product_card.css
+++ b/src/Product_Card/Product_card.css
@@ -84,6 +84,9 @@
     flex-direction: row;
     background:orange;
 }
+.cart-button:hover,.buy-button{
+    cursor: pointer;
+}
 .buy-button{
     width: 260px;
     height: 6vh;
