--- a/src/components/cart_Items/cartItems.css
+++ b/src/components/cart_Items/cartItems.css
@@ -259,13 +259,27 @@
     width: 250px;
     height: 5vh;
     border-radius: 3px;
-    background-color: #FB641B;
+    background-color: #4CAF50;
+    padding: 10px 20px;
     border: none;
     color: white;
     font-size: 18px;
+    cursor: pointer;
     font-weight: 600;
+    box-shadow: inset 2px 2px 8px rgba(0, 0, 0, 0.3);
     
 }
+.line{
+    color: rgb(187, 184, 184);
+}
+.place-order-Button:hover{
+    width: 253px;
+    height: 5.3vh;
+    background-color: #45a049;
+  
+
+}
+
 .right-sideOfCartPage {
     /* border: solid black 1px; */
     width: 40%;
@@ -396,4 +410,26 @@
     color: green;
     font-weight: 700;
     margin-right: 10px;
+}
+.quantity-input{
+    width: 50px;
+    height: 3vh;
+    padding-left: 15px;
+}
+
+.quantity-div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: red;
+    background-color: #f9dccd;
+    /* border: black solid 1px; */
+    width: 20%;
+}
+.quantity-div span{
+    /* border: black solid 1px; */
+    width: auto;
 }
