--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -34,11 +34,12 @@
     justify-content: center;
 }
 .header_frame2 {
-    width: 20%;
+    width: 30%;
     display: flex;
     /* border: solid black 1px; */
     flex-direction: row;
     align-items: center;
+    gap: 20px;
     justify-content: center;
 
 }
@@ -95,9 +96,10 @@
     gap: 10px;
     align-items: center;
     justify-content: center;
-    padding-left: 30px;
+    padding-left: 10px;
     /* border: black 1px solid; */
     position: relative;
+    width: 25%;
 }
 .cart-items span{
     position: absolute;
@@ -109,7 +111,7 @@
     border-radius: 50%;
     color: aliceblue;
     background-color: red;
-    left: 40px;
+    left: 20px;
     top: 8px;
 }
 
@@ -117,23 +119,26 @@
     font-size: 20px;
     font-family:Arial,sans-serif;
     color: rgb(70, 69, 69);
+    /* border: solid black; */
        
 }
 .Admin_button{
     /* border: solid black 1px; */
-    width: 150px;
+    width: 100px;
     height: 5vh;
-    background-color:rgb(240, 240, 252);
-    color:rgb(70, 69, 69);
+    background-color: rgb(73, 133, 251);
+    color:white;
     font-size: 17px;
-    border-radius: 5px;
+    border-radius: 3px;
     border: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 .Admin_button:hover{
-    width: 155px;
+    width: 102px;
     height: 5.1vh;
+    background-color: rgb(196, 192, 192);
     cursor: pointer;
+    color: black;
 }
 .Platform-name img{
     width: 100%;
@@ -148,6 +153,25 @@
     color: blue;
     font-weight: 800;
     padding-left: 30px;
+}
+.My-Order-Button{
+    border: solid black 1px;
+    width: 100px;
+    height: 5vh;
+    background-color: rgb(73, 133, 251);
+    color: white;
+    font-size: 17px;
+    border-radius: 3px;
+    border: none;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+.My-Order-Button:hover{
+    width: 102px;
+    height: 5.1vh;
+    color: black;
+    cursor: pointer;
+    background-color: rgb(196, 192, 192);
 }
 
 
