--- a/src/components/OrderPage/Order.css
+++ b/src/components/OrderPage/Order.css
@@ -70,9 +70,14 @@
     height: 70vh;
     position: absolute;
     left: 5%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     background-color: white;
     top: 25px;
     right: 5%;
+    box-shadow: 0px 1px 2px rgb(189, 187, 187);
+    border-radius: 5px;
     /* border: solid black 1px; */
 }
 .order-divo{
@@ -82,7 +87,7 @@
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
-    height: 78vh;
+    height: 69vh;
     gap: 5px;
     /* border: solid 1px black; */
 }
@@ -145,4 +150,130 @@
 .finalinfo{
     color: green;
     font-size: 18px;
+}
+
+
+/* orderCollection */
+
+.listImage{
+    width: 50px;
+    height: 50px;
+    color: #80adf6;
+}
+
+.collectionDiv{
+    width: 60%;
+        /* border: solid black 1px; */
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        box-shadow: 0px 1px 2px gray;
+        padding-top: 5px;
+        margin-top: 10px;
+        border-radius: 5px;
+        align-items: center;
+        margin-left: auto;
+        height: 15vh;
+        margin-right: auto;
+        flex-direction: row;
+}
+.leftOfOrder-div{
+    /* border: solid black 1px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(236, 245, 245);
+    box-shadow: 0px 1px 2px rgb(180, 190, 176);
+    border-radius: 10px;
+    width: 20%;
+    height: 11vh;
+}
+.rightOfOrder-div{  
+    /* border: solid black 1px; */
+    height: 11vh;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgb(236, 245, 245);
+    box-shadow: 0px 1px 2px rgb(180, 190, 176);
+    width: 45%;
+}
+
+.rightOfOrder-div p{
+    width: 90%;
+    /* border: solid black 1px; */
+    font-weight: 600;
+}
+.view-div{
+    width:20% ;
+    height: 11vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: solid black 1px; */
+}
+
+.view-div button{
+    height: 4vh;
+    border: none;
+    width: 120px;
+    background: linear-gradient(180deg,#80adf6,rgb(238, 238, 247),rgb(238, 238, 247),#80adf6);
+    box-shadow: 0px 1px 2px rgb(104, 104, 247);
+}
+.view-div button:hover{ 
+  cursor: pointer;
+  height: 4.1vh;
+  width: 122px;
+  background: linear-gradient(175deg, #6995dc, rgb(238, 238, 247), rgb(238, 238, 247), #6995dc);
+}
+.first{
+    color: brown;
+    font-size: 15px;
+}
+.second{
+    color: green;
+}
+.tick-icon{
+    width: 15px;
+}
+.BackCollection{
+    width: 180px;
+    /* border: solid black; */
+    height: 6vh;
+   
+}
+.back-button{
+    /* border: solid black; */
+    height: 7vh;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+.check-box{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    height: 5vh;
+    /* border: solid black; */
+    width: 90%;
+    align-items: center;
+    padding-left: 20px;
+}
+.Order-status h4{
+    padding-left: 8px;
+    font-size: 17px;
+}
+
+.check-box input{
+    width: 10%;
+}
+.check-box label {
+    width: 700%;
+}
+.Order-status{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
