--- a/src/components/OrderPage/Order.css
+++ b/src/components/OrderPage/Order.css
@@ -277,3 +277,14 @@
     flex-direction: column;
     gap: 5px;
 }
+.no-oreders{
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+}
+.no-oreders h1{
+    width: auto;
+}
